Updated version with sm and non-sm

--- a/Labwork_6/Untitled2.ipynb
+++ b/Labwork_6/Untitled2.ipynb
@@ -45,6 +45,34 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: numba in /usr/local/lib/python3.10/dist-packages (0.56.4)\n",
+            "Requirement already satisfied: llvmlite<0.40,>=0.39.0dev0 in /usr/local/lib/python3.10/dist-packages (from numba) (0.39.1)\n",
+            "Requirement already satisfied: numpy<1.24,>=1.18 in /usr/local/lib/python3.10/dist-packages (from numba) (1.23.5)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from numba) (67.7.2)\n"
+          ]
+        }
+      ],
+      "source": [
+        "! pip install numba\n",
+        "import numba\n",
+        "from numba import cuda\n",
+        "from numba.cuda.cudadrv import enums\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib\n",
+        "import numpy as np\n",
+        "import time\n",
+        "from numba import vectorize"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 48,
       "metadata": {
         "id": "IDcliM0Jjzro"
